--- a/react_website/src/app/components/ui/heroSection/heroSection.css
+++ b/react_website/src/app/components/ui/heroSection/heroSection.css
@@ -1,153 +1,188 @@
 /* Reset some default browser styles */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* Container styles */
-  .hero-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 65vh;
-    background-color: #282c34;
-    color: white;
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .container {
-    width: 100%;
-  }
-  
-  .row {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .col {
-    max-width: 800px;
-    width: 100%;
-  }
-  
-  .custom-form {
-    margin-top: 30px;
-    padding-top: 20px;
-    margin-bottom: 40px;
-  }
-  
-  .chatbox-container {
-    margin: 0 auto;
-    transition: all 0.8s ease-in-out;
-    width: 0;
-    height: 0;
-    overflow: hidden; /* Ensure the rounded corners are visible */
-  }
-  
-  .chatbox-container.expanded {
-    width: 900px;
-    height: 500px; /* Adjust height as necessary */
-  }
-  
-  .chat-content {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    background: white;
-    border-radius: 20px; /* Rounded corners */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden; /* Ensure the rounded corners are visible */
-  }
-  
-  .submit-button {
-    height: 50px;
-    width: 300px;
-    display: block;
-    margin: 20px auto 0;
-    font-size: 1.2em;
-    border: none;
-    border-radius: 20px; /* Rounded corners */
-    background-color: #61dafb;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .submit-button:hover {
-    background-color: #21a1f1;
-  }
-  
-  #chat-window {
-    height: 350px;
-    overflow-y: auto;
-    padding: 10px;
-    background: #e9eff1;
-    border: 1px solid #dfe3e6;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    width: 100%;
-  }
-  
-  #user-input {
-    width: calc(100% - 90px);
-    padding: 10px;
-    border: 1px solid #dfe3e6;
-    border-radius: 4px;
-    margin-right: 10px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color: #5cb85c;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #4cae4c;
-  }
-  
-  .message {
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    width: 100%;
-  }
-  
-  .user-message {
-    background-color: #dcf8c6;
-    text-align: left;
-  }
-  
-  .bot-message {
-    background-color: #f1f0f0;
-  }
-  
-  h1 {
-    font-size: 2em;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .try-button {
-    padding: 10px 20px;
-    background-color: #80d0c7;
-    color: white;
-    border: none;
-    border-radius: 20px; /* Rounded corners */
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-size: 1.2em;
-    font-family: var(--title-font-family);
-    font-size: var(--p-font-size);
-    font-weight: var(--font-weight-semibold);
-  }
-  
-  .try-button:hover {
-    background-color: #21a1f1;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Container styles */
+.hero-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 65vh;
+  background-color: #282c34;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.container {
+  width: 100%;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.col {
+  max-width: 800px;
+  width: 100%;
+}
+
+.custom-form {
+  margin-top: 30px;
+  padding-top: 20px;
+  margin-bottom: 40px;
+}
+
+.chatbox-container {
+  margin: 0 auto;
+  transition: all 0.8s ease-in-out;
+  width: 0;
+  height: 0;
+  overflow: hidden; /* Ensure the rounded corners are visible */
+}
+
+.chatbox-container.expanded {
+  width: 900px;
+  height: 550px; /* Adjust height as necessary */
+}
+
+.chat-content {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background: white;
+  border-radius: 20px; /* Rounded corners */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden; /* Ensure the rounded corners are visible */
+}
+
+.submit-button {
+  height: 50px;
+  width: 300px;
+  display: block;
+  margin: 20px auto 0;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 20px; /* Rounded corners */
+  background-color: #61dafb;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #21a1f1;
+}
+
+#chat-window {
+  height: 350px;
+  overflow-y: auto;
+  padding: 10px;
+  background: #e9eff1;
+  border: 1px solid #dfe3e6;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+#user-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #dfe3e6;
+  border-radius: 4px;
+  margin-right: 10px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #5cb85c;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #4cae4c;
+}
+
+.message {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  width: 100%;
+  color: black;
+}
+
+.user-message {
+  background-color: #dcf8c6;
+  text-align: left;
+}
+
+.bot-message {
+  background-color: #f1f0f0;
+  text-align: left;
+}
+
+h1 {
+  font-size: 2em;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.try-button {
+  padding: 10px 20px;
+  background-color: #80d0c7;
+  color: white;
+  border: none;
+  border-radius: 20px; /* Rounded corners */
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 1.2em;
+  font-family: var(--title-font-family);
+  font-size: var(--p-font-size);
+  font-weight: var(--font-weight-semibold);
+}
+
+.try-button:hover {
+  background-color: #21a1f1;
+}
+
+.input-info {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+.char-counter {
+  font-weight: bold;
+  color: black;
+}
+
+.char-counter.over-limit {
+  color: red;
+}
+
+.warning-text {
+  color: red;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.vibrate {
+  animation: vibrate 0.5s linear;
+}
+
+@keyframes vibrate {
+  0% { transform: translateX(0); }
+  25% { transform: translateX(-5px); }
+  50% { transform: translateX(5px); }
+  75% { transform: translateX(-5px); }
+  100% { transform: translateX(0); }
+}
